setup/kubernetes/fusion-app/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: fusion-app
  labels:
    name: fusion-app
