setup/kubernetes/fusion-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: industryfusion-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: iff-remove-prefix@kubernetescrd
  namespace: iff
spec:
  rules:
  - host: industryfusion.local
    http:
      paths:
      - backend:
          service:
            name: scorpio-aaio
            port:
              number: 9090
        path: /ngsi-ld
        pathType: ImplementationSpecific
      - backend:
          service:
            name: alerta
            port:
              number: 8080
        path: /alerta
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oisp-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: oisp-remove-prefix@kubernetescrd
  namespace: oisp
spec:
  rules:
  - host: industryfusion.local
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 4003
        path: /tsdb
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: industryfusion-ingress
  namespace: fusion-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: fusion-app-remove-prefix-fusionapp@kubernetescrd
spec:
  rules:
  - host: industryfusion.local
    http:
      paths:
      - backend:
          service:
            name: fusion-backend
            port:
              number: 80
        path: /fusionfrontend
        pathType: ImplementationSpecific
      - backend:
          service:
            name: fusion-backend
            port:
              number: 8080
        path: /fusionbackend
        pathType: ImplementationSpecific
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: remove-prefix-fusionapp
  namespace: fusion-app
spec:
  stripPrefix:
    prefixes:
    - /fusionfrontend
    - /fusionbackend
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: remove-prefix
  namespace: iff
spec:
  stripPrefix:
    prefixes:
    - /alerta
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: remove-prefix
  namespace: oisp
spec:
  stripPrefix:
    prefixes:
    - /tsdb
